<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.generalquiz.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#F50057"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#F50057"
            android:textSize="20sp"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:text="@string/heading1"/>
        <TextView
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:textColor="#F50057"
            android:textSize="60sp"
            android:textAllCaps="true"
            android:text="@string/heading2"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#F50057"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q1"
            style="@style/questions"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q1_1"
            style="@style/questions_statement"/>

        <ImageView
            android:layout_marginLeft="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/panda" />
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioButton
                style="@style/radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q1_option1"/>
            <RadioButton
                style="@style/radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q1_option2"/>
            <RadioButton
                style="@style/radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q1_option3"/>
            <RadioButton
                android:id="@+id/q1_sol"
                style="@style/radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q1_option4"/>
        </RadioGroup>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q2"
            style="@style/questions"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q2_1"
            style="@style/questions_statement"/>
        <EditText
            android:id="@+id/q2_user_input"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:padding="5dp"
            android:textColor="#000000"
            android:textSize="18sp"
            android:background="#9af50057"/>
        <TextView
            android:paddingBottom="0dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q3"
            style="@style/questions"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q3_1"
            style="@style/questions_statement"/>
        <CheckBox
            android:id="@+id/q3_option1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/radio"
            android:text="@string/q3_option1"/>
        <CheckBox
            android:id="@+id/q3_option2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/radio"
            android:text="@string/q3_option2"/>
        <CheckBox
            android:id="@+id/q3_option3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/radio"
            android:text="@string/q3_option3"/>
        <CheckBox
            android:id="@+id/q3_option4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/radio"
            android:text="@string/q3_option4"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q4"
            style="@style/questions"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q4_1"
            style="@style/questions_statement"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioButton
                style="@style/radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q4_option1"/>
            <RadioButton
                style="@style/radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q4_option2"/>
            <RadioButton
                android:id="@+id/q4_answer"
                style="@style/radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q4_option3"/>
            <RadioButton
                style="@style/radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q4_option4"/>
        </RadioGroup>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q5"
            style="@style/questions"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q5_1"
            style="@style/questions_statement"/>
            <RadioGroup
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/q5_answer"
                style="@style/radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q5_option1"/>
            <RadioButton
                style="@style/radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q5_option2"/>
            </RadioGroup>
        <Button
            android:onClick="submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/submit"
            android:textSize="24sp"
            android:fontFamily="sans-serif-light"
            android:textAllCaps="true"/>
    </LinearLayout>
</ScrollView>
